Bug: Fixed overlapping issues on the header, main, and footer. This includes any overlapping from the nav to the map-container. Also fixed the review-list which was overlapping the footer. CSS upgrade to breadcrumb font, nav center alignment, and restaurant img width size was done as well

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 1em;
 	color: #333;
 }
 a {
@@ -54,7 +54,9 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
@@ -70,7 +72,7 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 1em;
     margin: 0;
     width: calc(50% - 80px);
 }
@@ -186,11 +188,18 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+
+.inside {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
+  order: 0;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
@@ -205,10 +214,17 @@ nav h1 a {
   height: 100%;
   width: 100%;
 }
+
+.inside #maincontent{
+  order: 1;
+  overflow-y: auto;
+}
+
 .inside #footer {
   bottom: 0;
   position: absolute;
   width: 100%;
+  order: 2;
 }
 #restaurant-name {
   color: #f18200;
@@ -222,6 +238,8 @@ nav h1 a {
 }
 #restaurant-img {
 	width: 90%;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -242,8 +260,9 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 40px 40px 30px;
   width: 50%;
+  margin-top: 20px;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -262,7 +281,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -270,9 +289,35 @@ nav h1 a {
   padding: 0 20px 20px;
   position: relative;
   width: 85%;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
+
+#reviews-list li p:first-of-type {
+  display: inline-block;
+  background-color: #444;
+  color: white;
+  font-size: x-large;
+}
+
+#reviews-list li p:nth-of-type(2) {
+  display: inline-block;
+  background-color: #444;
+  color: #ddd;
+  float: right;
+}
+
+#reviews-list li p:nth-of-type(3) {
+  background-color: orange;
+  color: white;
+  font-size: large;
+  font-weight: bold;
+  display: table;
+  padding: 2px 10px;
+}
+
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 20px 0px 0 10px;
 }
 #restaurant-hours td {
   color: #666;
@@ -281,24 +326,28 @@ nav h1 a {
 
 @media screen and (max-width: 800px){
 
-  .inside {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
   #restaurant-container, #reviews-container {
-    width: 75%;
+    width: 100%;
     max-width: 100%;
+    padding: 40px 40px;
   } 
+
   .inside #map-container{
     height: 25%;
     position: relative;
     top: 0;
     width: 100%;
   }
+
+  .inside header{
+    position: relative;
+  }
+
   #breadcrumb{
     width: 100%;
+    font-size: 2em;
   }
+
   .inside #footer {
     position: relative;
   }
